/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package co.edu.udc.poo.alvaroperez.agenciaDeViajes.Modelo.entidades;

/**
 *
 * @author Mitzuke
 */
public enum TipoPlaza {
    TURISTA,
    PRIMERA_CLASE,
}
